home page design

--- a/templates/home.html
+++ b/templates/home.html
@@ -35,12 +35,12 @@
                     </a>
                 </button>
                 <p></p>
-                <h6>If you want to book a few servings of coffee, click on the cup picture.</h6>
+                <h6 class="bg-brown p-2 rounded">If you want to book a few servings of coffee, click on the cup picture.</h6>
             </center>
         </div>
+        <div class="col-md-1"></div>
     
-    
-        <div class="col-md-6 centered p-3 border border-0 border-warning">
+        <div class="col-md-7 centered p-3 border border-0 border-warning">
             {% for coffee in coffees %}
             <div class="row p-2 ">
                 <div class="card bg-brown" style="background-color:#634832; box-shadow: 10px 10px 5px #1a0c02;">
@@ -61,6 +61,8 @@
     <div class="row p-2 ">
         <div class="col-md-3 centered p-3">
             <center>
+                <h4 class="txt-shadow"> Make Coffee:</h4>
+                <br>
                 <button type="button" 
                 class="btn position-relative"
                 style="padding:0px">
@@ -89,6 +91,8 @@
         
         <div class="col-md-3 centered p-3">
             <center>
+                <h4 class="txt-shadow"> Booking:</h4>
+                <br>
                 <button type="button" 
                 class="btn position-relative"
                 style="padding:0px">
@@ -114,13 +118,13 @@
             </button>
         </center>   
     </div>
-    <div class="col-md-6 centered p-3 border border-0 border-warning">
-        <h1>Coffe Bar Ante Portas </h1>
-        <h4> THIS SITE UNDER CONSTRUCTION</h4>
-        <h6> THIS SITE IS A DJANGO TUTORIAL (and GIT :-)</h6>
+    <div class="col-md-6 centered p-3 bg-d">
+        <h1 class="black-line">Coffe Bar Ante Portas </h1>
+        <h4 class="black-line"> THIS SITE UNDER CONSTRUCTION</h4>
+        <h6 class="black-line"> THIS SITE IS A DJANGO TUTORIAL (and GIT :-)</h6>
 
-        <h6> staff login:    boss@staff.com</h6>
-        <h6>password:    Enter1</h6>
+        <h6 class="black-line"> staff login:    boss@staff.com</h6>
+        <h6 class="black-line">password:    Enter1</h6>
     </div>
 </div>
 
