--- a/static/css/base.css
+++ b/static/css/base.css
@@ -6,10 +6,7 @@ body {
     background-size: 100% 100%;
     color: #c59245;
     text-shadow: #dbc1ac;
-  }
-  .bg-brown {
-      background-color: 	#634832;
-  }
+}
 
 /* Modify the background color */
     
@@ -35,6 +32,17 @@ body {
     0    1px 0 #e4c79b,
    -1px  1px 0 #e4c79b,
    -1px  0   0 #e4c79b;
+}
+.black-line {
+    text-shadow:     
+    -1px -1px 0 #000,
+    0   -1px 0 #000,
+    1px -1px 0 #000,
+    1px  0   0 #000,
+    1px  1px 0 #000,
+    0    1px 0 #000,
+   -1px  1px 0 #000,
+   -1px  0   0 #000;
 }
 
 .navbar-brand:hover {
@@ -75,6 +83,11 @@ h1, h2, h3, h4 {
     background-color: 	#634832  /* #634832; #452415*/;
     color: #e4c79b;
     box-shadow: 10px 10px 5px #1a0c02;
+}
+.bg-d {
+    background-color: 	rgba(66,34,13,0.7);
+    box-shadow: 10px 10px 5px #1a0c02;
+    border-radius: 15px;
 }
 
 .text-capuccino {
