--- a/templates/base/navbar.html
+++ b/templates/base/navbar.html
@@ -52,7 +52,7 @@
       </li>
 
       <li class="nav-item ">
-        <a class="nav-link" href="{% url 'contact_page' %}">Contact us</a>
+        <a class="nav-link" href="{% url 'contact_page' %}">Contact</a>
       </li>
      {% if request.user.is_authenticated %}
      <li class="nav-item dropdown">
