--- a/templates/base.html
+++ b/templates/base.html
@@ -7,6 +7,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+    <link rel="icon" type="image/x-icon" href="/static/image/coffe_draw.webp">
     <title>{% block title %}{% endblock %}</title>
     {% include "base/css.html" %}
 
