--- a/templates/accounts/login.html
+++ b/templates/accounts/login.html
@@ -29,7 +29,7 @@ Login
         <div class="form-group">
             {{ form.as_p }}
         </div>
-        <button type="submit" class="btn btn-success">Login</button>
+        <button type="submit" class="btn btn-success" name="submit">Login</button>
     </form>
     </div>
 </div>
