--- a/templates/contact.html
+++ b/templates/contact.html
@@ -87,11 +87,14 @@
                 <img class="techn" src="\static\image\pytest.png" 
                 alt="pytest"                 title="Pytest"
                 >
-                <img class="techn" src="\static\image\django REST.png" 
-                alt="Django-REST"            title="Django-REST"
+                <img class="techn" src="\static\image\selenium.png" 
+                alt="pytest"                 title="Selenium"
                 >
                 <img class="techn" src="\static\image\sqlite.png" 
                 alt="sqlite"            title="sqlite"
+                >
+                <img class="techn" src="\static\image\django REST.png" 
+                alt="Django-REST"            title="Django-REST"
                 >
                 <img class="techn" src="\static\image\pythonanywhere.png" 
                 alt="pythonanywhere"            title="pythonanywhere"
