--- a/raw_material/templates/raw_material/ware_list.html
+++ b/raw_material/templates/raw_material/ware_list.html
@@ -24,7 +24,7 @@
     <div class="container pt-2"></div>
         <div class="row">
             <div class="col-sm-2">
-                    <a href="{% url 'raw_material:ware_choice' %}">   
+                    <a id="back_link" href="{% url 'raw_material:ware_choice' %}">   
                         <span>
                             <img src ="{% static 'image/'|add:ware_type_list.ware_image %}" class="rounded" style="height:100px" alt="choice_back">  
                         </a>                
@@ -74,5 +74,6 @@
                 </tr>
             {% endfor %}    
         </table>
+        <h4 id="END of table">END of table</h4>
     </div>  
     {% endblock %}
