acquisition_new tested

--- a/raw_material/templates/raw_material/acquisition_new.html
+++ b/raw_material/templates/raw_material/acquisition_new.html
@@ -57,7 +57,7 @@
         
         <button type="cancel" class="cancel btn btn-primary" onclick="window.history.back();">Cancel</button>
         {% if user.is_authenticated %}
-            <button type="submit" class="save btn btn-primary">Save</button>
+            <button type="submit" id="submit" class="save btn btn-primary">Save</button>
         {% endif %}
         
     </form>
